Iniciate lab01 part2

--- a/Lab01.ipynb
+++ b/Lab01.ipynb
@@ -31,9 +31,9 @@
     "        for i in range(0, len(data.values)):\n",
     "            noticeWords = data.values[i][0].split(\" \") + data.values[i][1].split(\" \")\n",
     "            for w in range(0, len(noticeWords)):\n",
-    "                if(searchWords[0].upper() == noticeWords[w].upper()):\n",
+    "                if(searchWords[0].lower() == noticeWords[w].lower()):\n",
     "                    wordIDs1.append(data.values[i][2])\n",
-    "                if(searchWords[2].upper() == noticeWords[w].upper()):\n",
+    "                if(searchWords[2].lower() == noticeWords[w].lower()):\n",
     "                    wordIDs2.append(data.values[i][2])\n",
     "                if((searchWords[1] in wordIDs1) and searchWords[2] in wordIDs2):\n",
     "                    break\n",
@@ -45,7 +45,7 @@
     "        for i in range(0, len(data.values)):\n",
     "            noticeWords = data.values[i][0].split(\" \") + data.values[i][1].split(\" \")\n",
     "            for w in range(0, len(noticeWords)):\n",
-    "                if(searchWords[0].upper() == noticeWords[w].upper()):\n",
+    "                if(searchWords[0].lower() == noticeWords[w].lower()):\n",
     "                    wordIDs.append(data.values[i][2])  \n",
     "                    break\n",
     "    return wordIDs\n"
@@ -54,7 +54,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "assert len(getIDs(\"debate OR presidencial\")) == 1770\n",
