--- a/coocurrence_matrix.ipynb
+++ b/coocurrence_matrix.ipynb
@@ -9,21 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "import numpy as np\n",
+    "\n",
     "from scipy import sparse\n",
+    "\n",
     "import nltk\n",
-    "from nltk import bigrams    \n",
-    "import scipy.sparse as sps"
+    "from nltk import bigrams\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import RegexpTokenizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/pandas/core/computation/check.py:17: UserWarning: The installed version of numexpr 2.4.3 is not supported in pandas and will be not be used\n",
+      "The minimum supported version is 2.4.6\n",
+      "\n",
+      "  ver=ver, min_ver=_MIN_NUMEXPR_VERSION), UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "content = news.titulo + \" \" + news.subTitulo + \" \" + news.conteudo\n",
     "content = content.fillna(\"\")"
@@ -42,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,26 +91,58 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 58,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "tokens_lists = content.apply(lambda text: text.lower().split())"
+    "#### Removing punctuation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokens = [token for tokens_list in tokens_lists for token in tokens_list]"
+    "tokenizer = RegexpTokenizer(r'\\w+')\n",
+    "tokens_lists = content.apply(lambda text: tokenizer.tokenize(text.lower()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Removing stopwords"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stopword_ = stopwords.words('portuguese')\n",
+    "filtered_tokens = tokens_lists.apply(lambda tokens: [token for token in tokens if token not in stopword_])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Transforming list of lists into one list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens = [token for tokens_list in filtered_tokens for token in tokens_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +193,7 @@
        "3"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,28 +225,38 @@
     "        else:\n",
     "            if(consultable_matrix[vocab[w1], w] > consultable_matrix[vocab[w1], min(top3, key=top3.get)]):\n",
     "                del top3[min(top3, key=top3.get)]\n",
-    "                top3[w] = consultable_matrix[vocab[w1], w]\n",
-    "                \n",
-    "    words = [str(list(vocab.keys())[list(vocab.values()).index(list(top3.keys())[0])]), str(list(vocab.keys())[list(vocab.values()).index(list(top3.keys())[1])]), str(list(vocab.keys())[list(vocab.values()).index(list(top3.keys())[2])])]\n",
+    "                top3[w] = consultable_matrix[vocab[w1], w]            \n",
+    "    words = [list(vocab.keys())[list(vocab.values()).index(list(top3.keys())[0])], list(vocab.keys())[list(vocab.values()).index(list(top3.keys())[1])], list(vocab.keys())[list(vocab.values()).index(list(top3.keys())[2])]]\n",
+    "    print(top3);\n",
     "    return words\n",
     "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['do', 'dilma', 'da']\n"
+      "{22027: 374, 46220: 2422, 34367: 536}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[u'rep\\xfablica', u'dilma', u'luiz']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(top3(\"presidente\"))"
+    "top3(\"presidente\")"
    ]
   },
   {
@@ -211,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,20 +283,24 @@
     "        wordIDs4 = []\n",
     "        for i in range(0, len(tokens_lists)):\n",
     "            for w in tokens_lists[i]:\n",
-    "                if(searchWords[0].lower() == w.lower()):\n",
+    "                if((searchWords[0].lower() == w.lower()) and (i not in wordIDs1)):\n",
     "                    wordIDs1.append(i)\n",
-    "                if(searchWords[2].lower() == w.lower()):\n",
+    "                if((searchWords[2].lower() == w.lower()) and (i not in wordIDs2)):\n",
     "                    wordIDs2.append(i)\n",
-    "                if(searchWords[3].lower() == w.lower()):\n",
+    "                if((searchWords[3].lower() == w.lower()) and (i not in wordIDs3)):\n",
     "                    wordIDs3.append(i)\n",
-    "                if(searchWords[4].lower() == w.lower()):\n",
+    "                if((searchWords[4].lower() == w.lower()) and (i not in wordIDs4)):\n",
     "                    wordIDs4.append(i)\n",
     "                if((i in wordIDs1) and (i in wordIDs2) and (i in wordIDs3) and (i in wordIDs4)):\n",
     "                    break\n",
     "        if(booleanOperator == \"AND\"):\n",
     "            wordIDs = set(wordIDs1).intersection(wordIDs2)\n",
+    "            wordIDs = set(wordIDs).intersection(wordIDs3)\n",
+    "            wordIDs = set(wordIDs).intersection(wordIDs4)\n",
     "        else:\n",
     "            wordIDs = set(wordIDs1).union(wordIDs2)\n",
+    "            wordIDs = set(wordIDs).union(wordIDs3)\n",
+    "            wordIDs = set(wordIDs).union(wordIDs4)\n",
     "    else:\n",
     "        for i in range(0, len(tokens_lists)):\n",
     "            for w in range(0, len(token_lists)):\n",
@@ -251,42 +312,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def expandQuery(word, top3):\n",
     "    query = word + \" OR \" + top3[0] + \" OR \" + top3[1] + \" OR \" + top3[2]\n",
     "    print(query)\n",
-    "    print(getIDs(query))"
+    "    return len(getIDs(query))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Consulta 1: dilma"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "As 3 palavras que mais co-ocorrem com a palavra 'dilma' são: rousseff,, e, rousseff\n",
-      "dilma OR rousseff, OR e OR rousseff\n"
+      "{23939: 208, 28603: 201, 39692: 2903}\n",
+      "dilma OR é OR disse OR rousseff\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4631"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "top3 = top3(\"dilma\")\n",
-    "print(\"As 3 palavras que mais co-ocorrem com a palavra 'dilma' são: \" + top3[0] + \", \" + top3[1] + \", \" + top3[2])\n",
-    "expandQuery(\"dilma\", top3)"
+    "expandQuery(\"dilma\", top3(\"dilma\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Consulta 2: presidente"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{22027: 374, 46220: 2422, 34367: 536}\n",
+      "presidente OR república OR dilma OR luiz\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3903"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expandQuery(\"presidente\", top3(\"presidente\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Consulta 3: votos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{5936: 184, 27347: 36, 16391: 33}\n",
+      "votos OR válidos OR contra OR candidato\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2207"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expandQuery(\"votos\", top3(\"votos\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Quais os termos retornados para a expansão de cada consulta?\n",
+    "Para consulta \"dilma\" foram retornados: \"rousseff\", \"disse\" e \"é\".\n",
+    "Para consulta \"presidente\" foram retornados: \"república\", \"dilma\" e \"luiz\".\n",
+    "Para consulta \"votos\" foram retornados: \"válidos\", \"contra\" e \"candidato\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Você acha que esses termos são de fato relacionados com a consulta original? Justifique.\n",
+    "Sim, pois podemos ver claramente que temos uma ligação entre as consultas e seus termos retornados. Por exemplo, na consulta \"presidente\" foram retornados os dois ultimos presidentes do Brasil (Dilma e Luiz Inácio)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Compare os documentos retornados para a consulta original com a consulta expandida. Quais resultados você acha que melhor capturam a necessidade de informação do usuário? Por que?\n",
+    "Creio que seja a consulta original, pois recupera um número menor e mais seletivo\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### A expansão de consultas é mais adequada para melhorar o recall ou o precision? Por que?\n",
+    "Mais adequada para melhorar o recall, pois retorna da consulta o mais relevante"
+   ]
   }
  ],
  "metadata": {
