--- a/Lab02-part2.ipynb
+++ b/Lab02-part2.ipynb
@@ -2,22 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 168,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/bin/sh: 1: Syntax error: word unexpected (expecting \")\")\n",
-      "<class 'IPython.core.display.Image'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd, numpy as np, csv\n",
-    "from IPython.display import Image\n",
-    "print(Image)\n",
     "filename = 'soc-sign-bitcoinotc.csv'\n",
     "file = open(filename, \"r\")\n",
     "reader = csv.reader(file)\n",
@@ -41,30 +30,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 160,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/bin/sh: 1: Syntax error: word unexpected (expecting \")\")\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "![title](\"img/gephi.png\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -73,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -346,16 +311,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "202\n",
+      "144\n",
+      "3996\n",
+      "361\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "#print indices de maior pagerank\n",
-    "print(list(result).index(sorted(result, reverse=True)[0]))\n",
-    "print(list(result).index(sorted(result, reverse=True)[1]))\n",
-    "print(list(result).index(sorted(result, reverse=True)[2]))\n",
-    "print(list(result).index(sorted(result, reverse=True)[3]))\n",
-    "print(list(result).index(sorted(result, reverse=True)[4]))"
+    "print(list(result).index(sorted(result, reverse=True)[0]) + 1)\n",
+    "print(list(result).index(sorted(result, reverse=True)[1]) + 1)\n",
+    "print(list(result).index(sorted(result, reverse=True)[2]) + 1)\n",
+    "print(list(result).index(sorted(result, reverse=True)[3]) + 1)\n",
+    "print(list(result).index(sorted(result, reverse=True)[4]) + 1)"
    ]
   },
   {
